# paper-format-checker

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: docx_parser.rs  format_compare.rs  lib.rs  llm.rs  main.rs  pdf_parser.rs
