[package]
name = "paper-format-checker"
version = "1.0.0"
description = "论文格式检查桌面应用"
authors = ["you"]
edition = "2021"

[lib]
name = "paper_format_checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
# Document parsing
zip = "2.2"
quick-xml = "0.37"
lopdf = "0.34"
# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
# Encoding detection
encoding_rs = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
